2006-04-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/db_adddel/glom_db_treemodel.cc: refresh_from_database(): 
	Return false if the query returns no records, so that on_notebook_find_criteria() 
	can offer a new find if none are found.
	* glom/application.cc: set_mode_find(): Actually activate the find action, not the 
	data action, so that a second find really works. 

2006-04-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/dialog_layout_details.cc: on_button_field_formatting(): 
	Set m_modified so that the new formatting is actually used.

2006-04-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtablewithfields.cc: on_datawidget_layout_item_added(): 
	Add a LayoutItem to the LayoutGroup of the flowtable, which is shared with the document, 
	and just let the parent rebuild the layout, instead of adding the actual widget here, 
	and expecting the parent to read layout from that. This makes right-click adding work 
	again.

2006-04-28  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/Makefile.am:
	* po/POTFILES.in:
	* many files: Moved data_structure, document, and part of python_embed directories 
	into libglom, so that the glom python module does not need to use symbols in the 
	glom executable, because this is not allowed in cygwin, using --no-undefined.
	In future, this can be used as public API to make the document/database structure 
	available to separate utilities and a web UI.

2006-04-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/data_structure/field.cc: get_type_name_ui(): Actually return 
	the translated string instead of the string for SQL. This prevents an error+crash 
	when adding a field in any locale that has been translated. Kind of important.

2006-04-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/base_db.cc:
	* glom/layout_item_dialogs/Makefile.am:
	* glom/layout_item_dialogs/dialog_buttonscript.cc:
	* glom/layout_item_dialogs/dialog_buttonscript.h: